Progreso en OAuth2, corrigiendo errores funcionales en proyecto alquiler, pendiente reestructuración del proyecto